Fixed overflow on chrome

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 *,
 *::after,
 *::before {
@@ -12,9 +11,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: normal normal normal Poppins;
-  /* overflow-x: hidden; */
-  background: blue;
-  min-height: 100vh;
+
 }
 * {
   box-sizing: border-box;
@@ -44,4 +41,3 @@ span {
 button::-moz-focus-inner {
   border: 0;
 }
-
